force-app/main/default/objects/Timesheet_Entry__c/fields/Fri__c.field-meta.xml
<CustomField>
    <fullName>Fri__c</fullName>
    <label>Fri</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>