force-app/main/default/objects/Timesheet_Entry__c/fields/Mon__c.field-meta.xml
<CustomField>
    <fullName>Mon__c</fullName>
    <label>Mon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>