force-app/main/default/objects/Timesheet_Entry__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Training of Mentors and Mentees</fullName>
            </value>
            <value>
                <fullName>Matching and Initiating</fullName>
            </value>
            <value>
                <fullName>Monitoring and Support</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Program Operations</fullName>
            </value>
            <value>
                <fullName>Program Planning and Management</fullName>
            </value>
            <value>
                <fullName>Program Evaluation</fullName>
            </value>
            <value>
                <fullName>Delivery of Train the trainer</fullName>
            </value>
            <value>
                <fullName>Prepare Program for NQMS</fullName>
            </value>
            <value>
                <fullName>Guide through NQMS Self-Assessment</fullName>
            </value>
            <value>
                <fullName>NQMS Review</fullName>
            </value>
            <value>
                <fullName>NQMS I&amp;I Plan</fullName>
            </value>
            <value>
                <fullName>NQMS Follow up TA</fullName>
            </value>
            <value>
                <fullName>Support addition of a program to Mentoring Connector</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Consultant Model</fullName>
            </value>
            <value>
                <fullName>TA Provider Learning- List Name</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>