force-app/main/default/objects/Timesheet_Entry__c/fields/Sat__c.field-meta.xml
<CustomField>
    <fullName>Sat__c</fullName>
    <label>Sat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>