force-app/main/default/objects/Timesheet_Entry__c/fields/Sun__c.field-meta.xml
<CustomField>
    <fullName>Sun__c</fullName>
    <label>Sun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>