force-app/main/default/objects/Timesheet_Entry__c/fields/Thu__c.field-meta.xml
<CustomField>
    <fullName>Thu__c</fullName>
    <label>Thu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>