force-app/main/default/objects/Timesheet_Entry__c/fields/Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent__c</fullName>
    <formula>Mon__c + Tue__c + Wed__c + Thu__c + Fri__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>