force-app/main/default/objects/Timesheet_Entry__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <label>Tue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>