force-app/main/default/objects/Timesheet_Entry__c/fields/Wed__c.field-meta.xml
<CustomField>
    <fullName>Wed__c</fullName>
    <label>Wed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>